--- a/filter/filter.html
+++ b/filter/filter.html
@@ -17,11 +17,11 @@
     <div class="max-w-3xl mx-auto">
         <h1 class="text-3xl font-bold mb-6 text-center">Filter</h1>
         <div id="filters" class="mb-6 flex justify-center space-x-4">
-            <button class="btn px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">All</button>
-            <button class="btn px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Chicken</button>
-            <button class="btn px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Beef</button>
-            <button class="btn px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Seafood</button>
-            <button class="btn px-4 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Vegetarian</button>
+            <button class="btn mt-2 px-4 py-2 bg-prime text-white rounded w-full hover:bg-red-600">All</button>
+            <button class="btn mt-2 px-4 py-2 bg-prime text-white rounded w-full hover:bg-red-600">Chicken</button>
+            <button class="btn mt-2 px-4 py-2 bg-prime text-white rounded w-full hover:bg-red-600">Beef</button>
+            <button class="btn mt-2 px-4 py-2 bg-prime text-white rounded w-full hover:bg-red-600">Seafood</button>
+            <button class="btn mt-2 px-4 py-2 bg-prime text-white rounded w-full hover:bg-red-600">Vegetarian</button>
         </div>
 
         <div id="products" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
