--- a/filter/filter.html
+++ b/filter/filter.html
@@ -30,12 +30,12 @@
 
     <script>
         const products = [
-            { name: "Chicken Fajitas", category: "Chicken", price: 240 },
-            { name: "Beef Tacos", category: "Beef", price: 233 },
-            { name: "Veggie Burrito", category: "Vegetarian", price: 140 },
-            { name: "Shrimp Quesadilla", category: "Seafood", price: 190 },
-            { name: "Steak Fajitas", category: "Beef", price: 122 },
-            { name: "Grilled Chicken Salad", category: "Chicken", price: 111 }
+            { name: "Chicken Fajitas", category: "Chicken", price: 240, image: "/src/assets/images/f1.avif" },
+            { name: "Beef Tacos", category: "Beef", price: 233, image: "/src/assets/images/f2.avif" },
+            { name: "Veggie Burrito", category: "Vegetarian", price: 140, image: "/src/assets/images/f3.avif" },
+            { name: "Shrimp Quesadilla", category: "Seafood", price: 190, image: "/src/assets/images/f4.avif" },
+            { name: "Steak Fajitas", category: "Beef", price: 122, image: "/src/assets/images/f1.avif" },
+            { name: "Grilled Chicken Salad", category: "Chicken", price: 111, image: "/src/assets/images/f3.avif" }
         ];
 
         const btns = document.querySelectorAll('.btn');
@@ -61,11 +61,17 @@
             products.forEach(product => {
                 const element = document.createElement('div');
                 element.innerHTML = `
-                <div class="bg-gray-200 p-4 rounded shadow">
-                    <h2 class="font-bold text-xl">${product.name}</h2>
-                    <p class="text-gray-600">${product.category}</p>
-                    <p class="text-green-600">${product.price}৳ </p>
-                </div>
+                <div class="p-4 rounded-lg  bg-gray-100">
+      <div class="overflow-hidden cursor-pointer">
+        <img src=${product.image} alt=""
+          class="hover:scale-110 transition-all ease-in-out duration-700  overflow-hidden ">
+      </div>
+      <div>
+        <div class="text-lg font-semibold mt-2 px-1 truncate">${product.name}</div>
+        <div class="text-sm text-gray-600 px-1">${product.category}
+        </div>
+        <div class="text-lg text-red-600 px-1">${product.price}৳
+        </div>
                 `;
                 productDiv.appendChild(element);
             });
